# Handwriting-Generation

./: .envrc  .gitattributes  .pre-commit-config.yaml  Makefile  README.md  dashboard.py  handwriting.code-workspace  pyproject.toml
training/: model.py  notebook.ipynb
